Inline the avatar image.

--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -11,7 +11,7 @@ description: >
 
   <div class="row">
     <div class="column">
-      <div class="img-circular"></div>
+      <div class="img-sw-avatar"></div>
       <p>
       Da sind Sie genau auf der richtigen Seite! Mein Name ist Stefan Wintermeyer. Als Consultant, Trainer und Autor habe ich mich auf die Themen <a href="/rails/">Ruby on Rails</a>, <a href="/phoenix/">Phoenix Framework</a> und <a href="/webperformance/">WebPerformance</a> spezialisiert.  Datenbankseitig arbeite ich am meisten mit den klassischen SQL Datenbanken (z.B. MariaDB und Postgresql) und bei Szenarien mit einer hohen Latenz gerne mit der NoSQL Datenbank CouchDB. Für rein statische Webseiten setzte ich auf Jekyll.
       </p>
