Image optimization for index.html

--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -23,7 +23,7 @@ description: >
     <div class="column">
       <h3>Ruby on Rails</h3>
       <figure>
-        <img class=scaled src="/assets/rails32-buch-cover.jpg" alt="Buchcover">
+        <img src="/assets/rails32-buch-cover-150x243.jpg" width="150" height="243" alt="Buchcover">
         <figcaption>Mein erstes Rails Buch.</figcaption>
       </figure>
       <p>Mittlerweile arbeite ich mehr als 10 Jahren mit Ruby on Rails. Mein erstes deutsche Ruby on Rails Buch erschien zur Rails Version 3.2 (5 Sterne Bewertung bei Amazon). Mein neustes englisches Rails Buch beschäftigt sich mit der aktuellen Version 5.1.</p>
@@ -34,7 +34,7 @@ description: >
     <div class="column">
       <h3>Phoenix Framework</h3>
       <figure>
-        <a href="https://www.youtube.com/watch?v=5injICmmVII"><img class=scaled src="assets/conferences/2017/sw_speaks_at_lonestar2017.jpg" alt="Phoenix Erfinder Chris McCord und Stefan Wintermeyer"></a>
+        <a href="https://www.youtube.com/watch?v=5injICmmVII"><img src="assets/conferences/2017/sw_speaks_at_lonestar2017-150x171.jpg" alt="Phoenix Erfinder Chris McCord und Stefan Wintermeyer" width="150" height="171"></a>
         <figcaption>Vortrag auf der LoneStar ElixirConf</figcaption>
       </figure>
       <p>Seit gut zwei Jahren beschäftige ich mich mit dem Phoenix Framework und der funktionalen Programmiersprache Elixir als schnelle Alternative zu Ruby on Rails. Das Open-Source Social-Network <a href="https://www.vutuv.de">vutuv</a> wurde von mir als Phoenix Projekt gegründet.</p>
@@ -55,7 +55,7 @@ description: >
     <div class="column">
       <h3>Caching</h3>
       <figure>
-        <a href="https://www.youtube.com/watch?v=7uKxDVflXdI"><img class=scaled src="/assets/screenshots/railsconf-cache-talk.png" alt="Buchcover"></a>
+        <a href="https://www.youtube.com/watch?v=7uKxDVflXdI"><img src="/assets/screenshots/railsconf-cache-talk-150x85.png" alt="Buchcover" width="150" height="85"></a>
         <figcaption>RailsConf Vortrag</figcaption>
       </figure>
       <p>Seitdem ich der <a href="https://www.youtube.com/watch?v=7uKxDVflXdI">RailsConf in Portland den Vortrag "Cache = Cash!"</a> gehalten habe ist Cache-Optimierung ein eigener Punkt in meinem Consulting-Portfolio geworden. Mit einem guten Cache kann man Geschwindigkeit erhöhen und Kosten senken. Mit einem schlechten Cache aber problemlos das Gegenteil bewirken.</p>
