--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Wintermeyer Consulting - Rails, Phoenix und WebPerformance
 description: >
   Consulting und Schulungen vom Buchautor Stefan Wintermeyer. Inhouse und Remote. Know-How: 10 Jahre Rails. 2 Jahre Phoenix. 4 Jahre WebPerformance.
+sw_avatar: true
 ---
 <div class="container">
   <div class="row">
