Improves webperformance of /webperformance/

--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -7,27 +7,28 @@ sw_avatar: true
 ---
 <div class="container">
   <div class="row">
-    <div class="column"><h1>Schnelle Webseiten und -shops?</h1></div>
+    <div class="column"><h1>Schnelle Webseiten und -shops!</h1></div>
   </div>
 
   <div class="row">
     <div class="column">
       <div class="img-sw-avatar"></div>
       <p>
-      Da sind Sie genau auf der richtigen Seite! Mein Name ist Stefan Wintermeyer. Als Consultant, Trainer und Autor habe ich mich auf die Themen <a href="/rails/">Ruby on Rails</a>, <a href="/phoenix/">Phoenix Framework</a> und <a href="/webperformance/">WebPerformance</a> spezialisiert.  Datenbankseitig arbeite ich am meisten mit den klassischen SQL Datenbanken (z.B. MariaDB und Postgresql) und bei Szenarien mit einer hohen Latenz gerne mit der NoSQL Datenbank CouchDB. Für rein statische Webseiten setzte ich auf Jekyll.
+      Mein Name ist Stefan Wintermeyer. Als Consultant, Trainer und Autor habe ich mich auf die Themen <a href="/rails/">Ruby on Rails</a>, <a href="/phoenix/">Phoenix Framework</a> und <a href="/webperformance/">WebPerformance</a> spezialisiert.  Datenbankseitig arbeite ich am meisten mit den klassischen SQL Datenbanken (z.B. PostgreSQL und MariaDB/MySQL). Bei Szenarien mit einer hohen Latenz gerne mit der NoSQL Datenbank CouchDB. Für rein statische Webseiten setzte ich auf Jekyll.
       </p>
       <p>Meine wichtigsten Accounts: <a href="https://twitter.com/wintermeyer">Twitter (@wintermeyer)</a>, <a href="https://github.com/wintermeyer"> Github (wintermeyer)</a>, <a href="https://speakerdeck.com/wintermeyer">Speakerdeck (wintermeyer)</a> und <a href="https://www.vutuv.de/users/stefan.wintermeyer">vutuv</a>.</p>
-      <p>Ich unterstützte Sie als Programmierer, Architekt oder interims Teamleiter bei der Planung und Erstellung von neuen und bei der Verbesserung von bestehenden Webapplikationen und -seiten. On-site, Remote und bei Feuerwehreinsätzen auch 24 x 7. Gerne helfe ich Ihnen mit Schulungen um Ihr bestehendes Team auf neue Aufgaben vorzubereiten.</p>
+      <p>Ich unterstützte Sie als Programmierer, Architekt oder interims Teamleiter bei der Planung und Erstellung von neuen und bei der Verbesserung von bestehenden Webapplikationen und -seiten. On-site, Remote und bei Feuerwehreinsätzen auch 24 x 7. Gerne helfe ich Ihnen mit Schulungen um Ihre Entwickler auf neue Aufgaben vorzubereiten.</p>
     </div>
   </div>
   <div class="row">
     <div class="column">
       <h3>Ruby on Rails</h3>
       <figure>
-        <img src="/assets/rails32-buch-cover-150x243.jpg" width="150" height="243" alt="Buchcover">
+        <a href="http://amzn.to/2uFtEOh">
+        <img src="/assets/rails32-buch-cover-150x243.jpg" width="150" height="243" alt="Buchcover"></a>
         <figcaption>Mein erstes Rails Buch.</figcaption>
       </figure>
-      <p>Mittlerweile arbeite ich mehr als 10 Jahren mit Ruby on Rails. Mein erstes deutsche Ruby on Rails Buch erschien zur Rails Version 3.2 (5 Sterne Bewertung bei Amazon). Mein neustes englisches Rails Buch beschäftigt sich mit der aktuellen Version 5.1.</p>
+      <p>Seit mehr als 10 Jahren arbeite ich mit Ruby on Rails. <a href="http://amzn.to/2uFtEOh">Mein erstes deutsche Ruby on Rails Buch</a> erschien zur Rails Version 3.2 (5 Sterne Bewertung bei Amazon). Mein neustes englisches Rails Buch beschäftigt sich mit der aktuellen Version 5.1.</p>
       <p>Rails ist mein Butter und Brot Geschäft. Es ist weiterhin das populärste Framework um Webapplikationen zu erstellen.</p>
       <p><a href="/rails/">Mehr Informationen zu Rails Consulting und Schulung.</a></p>
       {% include talks-mini-table.html tag='Rails' %}
@@ -51,6 +52,7 @@ sw_avatar: true
       <p>Jede Sekunde schnellere Ladezeit bedeutet 5% bessere Conversion Rate und führt zu geringeren Bounce Raten.</p>
       <p>Beim Thema WebPerformance ist Deutschland ein Spätzünder. Für die meisten Firmen ist erst die Aussicht auf ein besseres Google- oder Facebook-Ranking der Einstiegspunkt für die WebPerformance-Optimierung.</p>
       <p>Diese Optimierung ist ein Full-Stack-Problem. Dabei untersuche ich von dem Betriebssystem über SQL-Queries bis zum ausgegebenen HTML alle Bereiche.</p>
+      <p><a href="/webperformance/">Mehr Informationen zu meinem WebPerformance Angebot.</a></p>
       {% include talks-mini-table.html tag='WebPerf' %}
     </div>
     <div class="column">
