--- a/jekyll/webperformance/index.html
+++ b/jekyll/webperformance/index.html
@@ -12,8 +12,9 @@ description: >
   <div class="row">
     <div class="column">
       <figure>
-        <a href="http://www.heise.de/ix/inhalt/2015/8/102/"><img class=scaled src="/assets/ix-webperformance-artikel.png" alt="Phoenix Erfinder Chris McCord und Stefan Wintermeyer"></a>
-        <figcaption>In der <a href="http://www.heise.de/ix/inhalt/2015/8/102/">iX Ausgabe 8/2015</a> wurde ein Artikel von mir zum Thema WebPerformance veröffentlicht.</figcaption>
+      <a href="http://www.heise.de/ix/inhalt/2015/8/102/">
+        <img src="{% base64 http://localhost:4000/assets/ix-webperformance-artikel.gif %}" alt="iX WebPerformance Artikel Ausgabe 8/2015" /></a>
+        <figcaption><a href="http://www.heise.de/ix/inhalt/2015/8/102/">Mein iX WebPerformance-Artikel Ausgabe 8/2015</a></figcaption>
       </figure>
       <p>
         Eine Sekunde schnellere Ladezeit resultiert im Durchschnitt in einer 5 Prozent besseren Conversion Rate. Ich helfe Ihnen eine neue schnelle Webseite zu realisieren oder Ihre existierene Webseite und -applikation zu optimieren.
