--- a/jekyll/webperformance/index.html
+++ b/jekyll/webperformance/index.html
@@ -13,7 +13,7 @@ description: >
     <div class="column">
       <figure>
       <a href="http://www.heise.de/ix/inhalt/2015/8/102/">
-        <img src="{% base64 http://localhost:4000/assets/ix-webperformance-artikel.gif %}" alt="iX WebPerformance Artikel Ausgabe 8/2015" /></a>
+        <img src="{% base64 assets/ix-webperformance-artikel.gif %}" alt="iX WebPerformance Artikel Ausgabe 8/2015" /></a>
         <figcaption><a href="http://www.heise.de/ix/inhalt/2015/8/102/">Mein iX WebPerformance-Artikel Ausgabe 8/2015</a></figcaption>
       </figure>
       <p>
