--- a/jekyll/phoenix/index.html
+++ b/jekyll/phoenix/index.html
@@ -16,7 +16,7 @@ description: >
         Phoenix ist schnell. Im Schnitt etwa 10 mal schneller als <a href="/rails/">Ruby on Rails</a>. Da Phoenix Hot Deployments unterstützt ist ein Zero-Downtime Deployment kein Problem.
       </p>
       <figure>
-        <img class=scaled src="/assets/conferences/2017/sw_mit_chris_mccord.jpg" alt="Phoenix Erfinder Chris McCord und Stefan Wintermeyer">
+        <img class=scaled src="{% base64 assets/conferences/2017/sw_mit_chris_mccord.jpg %}" alt="Phoenix Erfinder Chris McCord und Stefan Wintermeyer" />
         <figcaption>Phoenix Erfinder Chris McCord und Stefan Wintermeyer</figcaption>
       </figure>
       <p>
