Textchanges and changed an image.

--- a/jekyll/rails/index.html
+++ b/jekyll/rails/index.html
@@ -18,8 +18,9 @@ description: >
       </figure>
       <p>
         <a href="http://rubyonrails.org">Ruby on Rails</a> ist ein populäres und quelloffenes Web Application Framework. Es wird für große Webseiten wie <a href="https://www.xing.com">XING</a>, <a href="https://www.shopify.com">shopify</a>, <a href="https://www.airbnb.de">airbnb</a> und <a href="https://www.github.com">GitHub</a> eingesetzt.
-        Für existierende Projekte helfe ich Ihnen bei Erweiterungen und Verbesserung (Performance, Skalierung, Refactoring und Know-How-Transfer).
-        Bei neuen Projekten helfe ich Ihnen beim Bootstrapping. Der Start auf der grünen Wiese ist natürlich der optimale Startpunkt für performante Webapplikationen. Gerne helfe ich Ihnen bei der Planung, Strukturierung und Umsetzung. Mit WebPerformance und HA-Know-How stelle ich sicher, dass Ihre Webseite schnell und störungsfrei ausgeliefert wird.
+        Für existierende Projekte helfe ich Ihnen bei Erweiterungen und Verbesserung (Performance, Skalierung, Refactoring und Know-How-Transfer).</p>
+        <p>
+        Bei neuen Projekten helfe ich Ihnen beim Bootstrapping und bei Bedarf auch beim Recruiting für noch nicht besetzte Stellen. Der Start auf der grünen Wiese ist natürlich der optimale Startpunkt für performante Webapplikationen. Gerne helfe ich Ihnen bei der Planung, Strukturierung und Umsetzung. Mit WebPerformance und HA-Know-How stelle ich sicher, dass Ihre Webseite schnell und störungsfrei ausgeliefert wird.
       </p>
     </div>
   </div>
