--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -14,10 +14,10 @@ sw_avatar: true
     <div class="column">
       <div class="img-sw-avatar"></div>
       <p>
-      Mein Name ist Stefan Wintermeyer. Als Consultant, Trainer und Autor habe ich mich auf die Themen <a href="/rails/">Ruby on Rails</a>, <a href="/phoenix/">Phoenix Framework</a> und <a href="/webperformance/">WebPerformance</a> spezialisiert.  Datenbankseitig arbeite ich meistens mit den klassischen SQL Datenbanken PostgreSQL und MariaDB/MySQL. Bei Szenarien mit einer hohen Latenz gerne mit der NoSQL Datenbank CouchDB. Für rein statische Webseiten setzte ich auf Jekyll.
+      Mein Name ist Stefan Wintermeyer. Als Consultant, Trainer und Autor habe ich mich auf die Themen <a href="/rails/">Ruby on Rails</a>, <a href="/phoenix/">Phoenix Framework</a> und <a href="/webperformance/">WebPerformance</a> spezialisiert.  Datenbankseitig arbeite ich meistens mit den klassischen SQL-Datenbanken PostgreSQL und MariaDB/MySQL; bei Projekten mit einer hohen Netzwerk-Latenz im Cluster gerne mit der NoSQL Datenbank CouchDB. Für rein statische Webseiten setzte ich auf Jekyll.
       </p>
       <p>Meine wichtigsten Accounts: <a href="https://twitter.com/wintermeyer">Twitter (@wintermeyer)</a>, <a href="https://medium.com/@wintermeyer">Medium</a>, <a href="https://github.com/wintermeyer"> Github (wintermeyer)</a>, <a href="https://speakerdeck.com/wintermeyer">Speakerdeck</a> und <a href="https://www.vutuv.de/users/stefan.wintermeyer">vutuv</a>.</p>
-      <p>Ich unterstützte Sie als Programmierer, Architekt oder interims Teamleiter bei der Planung und Erstellung von neuen und bei der Verbesserung von bestehenden Webapplikationen und -seiten. On-site, Remote und bei Feuerwehreinsätzen auch 24 x 7. Gerne helfe ich Ihnen mit Schulungen um Ihre Entwickler auf neue Aufgaben vorzubereiten.</p>
+      <p>Als Programmierer, Architekt oder Interim-Teamleiter unterstütze ich bei der Planung und Erstellung von neuen und bei der Verbesserung von bestehenden Webapplikationen und -seiten; vor Ort, Remote und bei Feuerwehreinsätzen auch 24 x 7. Gerne helfe ich Ihnen mit Schulungen, um Ihre Entwickler auf neue Aufgaben vorzubereiten.</p>
     </div>
   </div>
   <div class="row">
@@ -28,18 +28,18 @@ sw_avatar: true
         <img class="scaled" src="{% base64 assets/publications/2017/rails-5.1-linux-magazin-180x254.jpg %}" alt="Linux Magazin 6/2017 Artikel zu Rails 5.1"></a>
         <figcaption>Mein Linux Magazin Artikel zu Rails 5.1</figcaption>
       </figure>
-      <p>Seit mehr als 10 Jahren arbeite ich mit Ruby on Rails. <a href="http://amzn.to/2uFtEOh">Mein erstes deutsche Ruby on Rails Buch</a> erschien zur Rails Version 3.2 (5 Sterne Bewertung bei Amazon). Mein neustes englisches Rails Buch beschäftigt sich mit der aktuellen Version 5.1.</p>
-      <p>Rails ist mein Butter und Brot Geschäft. Es ist weiterhin das populärste Framework um Webapplikationen zu erstellen.</p>
+      <p>Seit mehr als 10 Jahren arbeite ich mit Ruby on Rails. <a href="http://amzn.to/2uFtEOh">Mein erstes deutsche Ruby on Rails Buch</a> erschien zur Rails Version 3.2 (5-Sterne-Bewertung bei Amazon). Mein neustes englisches Rails-Buch beschäftigt sich mit der aktuellen Version 5.1.</p>
+      <p>Rails ist mein Butter und Brot Geschäft. Es ist weiterhin das populärste Framework, um Webapplikationen zu erstellen.</p>
       <p><a href="/rails/">Mehr Informationen zu Rails Consulting und Schulung.</a></p>
       {% include talks-mini-table.html tag='Rails' %}
     </div>
     <div class="column">
       <h3>Phoenix Framework</h3>
       <figure>
-        <a href="https://www.youtube.com/watch?v=5injICmmVII"><img src="assets/conferences/2017/sw_speaks_at_lonestar2017-150x171.jpg" alt="Phoenix Erfinder Chris McCord und Stefan Wintermeyer" class="scaled"></a>
+        <a href="https://www.youtube.com/watch?v=5injICmmVII"><img src="/assets/conferences/2017/sw_speaks_at_lonestar2017-150x171.jpg" alt="Phoenix Erfinder Chris McCord und Stefan Wintermeyer" class="scaled"></a>
         <figcaption>Vortrag auf der LoneStar ElixirConf</figcaption>
       </figure>
-      <p>Seit gut zwei Jahren beschäftige ich mich mit dem Phoenix Framework und der funktionalen Programmiersprache Elixir als schnelle Alternative zu Ruby on Rails. Das Open-Source Social-Network <a href="https://www.vutuv.de">vutuv</a> wurde von mir als Phoenix Projekt gegründet.</p>
+      <p>Seit gut zwei Jahren beschäftige ich mich mit dem Phoenix Framework und der funktionalen Programmiersprache Elixir als schnelle Alternative zu Ruby on Rails. Das Open-Source Social-Network <a href="https://www.vutuv.de">vutuv</a> wurde von mir als Phoenix-Projekt gegründet.</p>
       <p>Phoenix ist ideal für alle Projekte, die maximale Performance benötigen.</p>
       <p><a href="/phoenix/">Mehr Informationen zu Phoenix Consulting und Schulung.</a></p>
       {% include talks-mini-table.html tag='Phoenix' %}
@@ -49,7 +49,7 @@ sw_avatar: true
   <div class="row">
     <div class="column">
       <h3>WebPerformance</h3>
-      <p>Jede Sekunde schnellere Ladezeit bedeutet 5% bessere Conversion Rate und führt zu geringeren Bounce Raten.</p>
+      <p>Jede Sekunde schnellere Ladezeit bedeutet 5% bessere Conversion-Rate und führt zu geringeren Bounce-Raten.</p>
       <p>Beim Thema WebPerformance ist Deutschland ein Spätzünder. Für die meisten Firmen ist erst die Aussicht auf ein besseres Google- oder Facebook-Ranking der Einstiegspunkt für die WebPerformance-Optimierung.</p>
       <p>Diese Optimierung ist ein Full-Stack-Problem. Dabei untersuche ich von dem Betriebssystem über SQL-Queries bis zum ausgegebenen HTML alle Bereiche.</p>
       <p><a href="/webperformance/">Mehr Informationen zu meinem WebPerformance Angebot.</a></p>
@@ -60,7 +60,7 @@ sw_avatar: true
         <a href="https://www.youtube.com/watch?v=7uKxDVflXdI"><img src="/assets/screenshots/railsconf-cache-talk-150x85.png" alt="Buchcover" class="scaled"></a>
         <figcaption>RailsConf Vortrag</figcaption>
       </figure>
-      <p>Seitdem ich der <a href="https://www.youtube.com/watch?v=7uKxDVflXdI">RailsConf in Portland den Vortrag "Cache = Cash!"</a> gehalten habe ist Cache-Optimierung ein eigener Punkt in meinem Consulting-Portfolio geworden. Mit einem guten Cache kann man Geschwindigkeit erhöhen und Kosten senken. Mit einem schlechten Cache aber problemlos das Gegenteil bewirken.</p>
+      <p>Seitdem ich auf der <a href="https://www.youtube.com/watch?v=7uKxDVflXdI">RailsConf in Portland den Vortrag "Cache = Cash!"</a> gehalten habe ist Cache-Optimierung ein eigener Punkt in meinem Consulting-Portfolio geworden. Mit einem guten Cache kann man Geschwindigkeit erhöhen und Kosten senken, mit einem schlechten Cache aber schnell das Gegenteil bewirken.</p>
       <p>Bei Rails und Phoenix Applikationen biete ich Consulting für folgende Themen an:</p>
       <ul>
         <li>Fragment Caching</li>
