--- a/jekyll/webperformance/index.html
+++ b/jekyll/webperformance/index.html
@@ -25,7 +25,9 @@ description: >
       <p>
         Ein Umstieg auf HTTP/2 und die neuesten Komprimiermethoden natürlich ist immer auf der Check-Liste. Aber das ist ja Standard.
       </p>
-
+      <p>
+        Wenn Sie sich noch nie technisch mit dem Thema WebPerformance beschäftigt haben, empfehle ich Ihnen meinen Grundlagenartikel in der iX 08/2015 (<a href="http://www.heise.de/ix/inhalt/2015/8/102/">online als PDF</a>). Wenn Sie tiefer einsteigen wollen, dann das Buch <a href="https://hpbn.co">High Performance Browser Networking</a> von Ilya Grigorik. Als initialen Kick-Start biete ich Ihnen gerne einen halb- oder ganztägigen Workshop an.
+      </p>
     </div>
   </div>
 
