Adds training data and contact information.

--- a/jekyll/impressum.html
+++ b/jekyll/impressum.html
@@ -25,7 +25,7 @@ description: "Impressumg der Wintermeyer Consulting."
           E-Mail:
           <a href="mailto:{{ site.email }}">{{ site.email }}</a>
           <br>
-          <a href="{{ site.url }}">{{ site.url }}</a>
+          Telefon: <a href="tel:{{ site.phone_number_i18n }}">{{ site.phone_number }}</a>
         </address>
       </p>
       <p>
@@ -37,13 +37,6 @@ description: "Impressumg der Wintermeyer Consulting."
     </div>
 
     <div class="column">
-      <p>
-        <strong>
-          Umsatzsteuer-Identifikationsnummer gem&auml;&szlig; &sect; 27 a Umsatzsteuergesetz:
-        </strong><br />
-        DExxxxxxxx
-      </p>
-
       <h3>Social Media</h3>
       <ul>
         <li><a href="https://www.vutuv.de/users/stefan.wintermeyer/">vutuv  Profil</a></li>
@@ -51,8 +44,6 @@ description: "Impressumg der Wintermeyer Consulting."
         <li><a href="https://www.xing.com/profile/Stefan_Wintermeyer">XING  Profil</a></li>
       </ul>
     </div>
-
-
   </div>
 
   <div class="row">
