--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -16,7 +16,7 @@ sw_avatar: true
       <p>
       Mein Name ist Stefan Wintermeyer. Als Consultant, Trainer und Autor habe ich mich auf die Themen <a href="/rails/">Ruby on Rails</a>, <a href="/phoenix/">Phoenix Framework</a> und <a href="/webperformance/">WebPerformance</a> spezialisiert.  Datenbankseitig arbeite ich meistens mit den klassischen SQL-Datenbanken PostgreSQL und MariaDB/MySQL; bei Projekten mit einer hohen Netzwerk-Latenz im Cluster gerne mit der NoSQL Datenbank CouchDB. Für rein statische Webseiten setzte ich auf Jekyll.
       </p>
-      <p>Meine wichtigsten Accounts: <a href="https://twitter.com/wintermeyer">Twitter (@wintermeyer)</a>, <a href="https://medium.com/@wintermeyer">Medium</a>, <a href="https://github.com/wintermeyer"> Github (wintermeyer)</a>, <a href="https://speakerdeck.com/wintermeyer">Speakerdeck</a> und <a href="https://www.vutuv.de/users/stefan.wintermeyer">vutuv</a>.</p>
+      {% include kontaktinformationen.html %}
       <p>Als Programmierer, Architekt oder Interim-Teamleiter unterstütze ich bei der Planung und Erstellung von neuen und bei der Verbesserung von bestehenden Webapplikationen und -seiten; vor Ort, Remote und bei Feuerwehreinsätzen auch 24 x 7. Gerne helfe ich Ihnen mit Schulungen, um Ihre Entwickler auf neue Aufgaben vorzubereiten.</p>
     </div>
   </div>
