--- a/jekyll/rails/index.html
+++ b/jekyll/rails/index.html
@@ -22,6 +22,7 @@ description: >
         <p>
         Bei neuen Projekten helfe ich Ihnen beim Bootstrapping und bei Bedarf auch beim Recruiting für noch nicht besetzte Stellen. Der Start auf der grünen Wiese ist natürlich der optimale Startpunkt für performante Webapplikationen. Gerne helfe ich Ihnen bei der Planung, Strukturierung und Umsetzung. Mit WebPerformance und HA-Know-How stelle ich sicher, dass Ihre Webseite schnell und störungsfrei ausgeliefert wird.
       </p>
+      {% include kontaktinformationen.html %}
     </div>
   </div>
   <div class="row">
