--- a/jekyll/webperformance/index.html
+++ b/jekyll/webperformance/index.html
@@ -28,6 +28,7 @@ description: >
       <p>
         Wenn Sie sich noch nie technisch mit dem Thema WebPerformance beschäftigt haben, empfehle ich Ihnen meinen Grundlagenartikel in der iX 08/2015 (<a href="http://www.heise.de/ix/inhalt/2015/8/102/">online als PDF</a>). Wenn Sie tiefer einsteigen wollen, dann das Buch <a href="https://hpbn.co">High Performance Browser Networking</a> von Ilya Grigorik. Als initialen Kick-Start biete ich Ihnen gerne einen halb- oder ganztägigen Workshop an.
       </p>
+      {% include kontaktinformationen.html %}
     </div>
   </div>
 
@@ -36,7 +37,6 @@ description: >
       <h3>Consulting</h3>
       <p>Ich unterstützte Sie bei der analyse Ihrer bestehenden Webseite und WebApplikation. On-site, Remote und bei Feuerwehreinsätzen auch 24 x 7. </p>
       {% include consulting-preise.html %}
-
 
       <h3>Schulungen</h3>
       <p>Ich biete auf Anfrage eine eintägigen WebPerformance-Schulung an. Wir starten in der Schulung morgens mit einem normalen Rails-Webshop und optimieren diesen im Laufe des Tages.</p>
