--- a/jekyll/phoenix/index.html
+++ b/jekyll/phoenix/index.html
@@ -26,6 +26,7 @@ description: >
         Für existierende Projekte helfe ich Ihnen bei Erweiterungen, Verbesserung (Performance, Skalierung, Refactoring und Know-How-Transfer) und beim Umzug von Rails auf Phoenix.
         Bei neuen Projekten helfe ich Ihnen beim Bootstrapping. Der Start auf der grünen Wiese ist natürlich der optimale Startpunkt für performante Webapplikationen. Gerne helfe ich Ihnen bei der Planung, Strukturierung und Umsetzung. Mit WebPerformance und HA-Know-How stelle ich sicher, dass Ihre Webseite schnell und störungsfrei ausgeliefert wird.
       </p>
+      {% include kontaktinformationen.html %}
     </div>
   </div>
   <div class="row">
