--- a/jekyll/trainings/rails.html
+++ b/jekyll/trainings/rails.html
@@ -2,7 +2,7 @@
 layout: default
 title: Ruby on Rails 5.1 Schulung mit Stefan Wintermeyer
 description: >
-  Zweitägiger Anfängerkurs vom Buchautor Stefan Wintermeyer. Ruby on Rails 5.1 auf Basis von Ruby 2.4. Inhouse-Schulung möglich.
+  Zweitägiger Anfängerkurs vom Rails-Bestseller-Autor Stefan Wintermeyer. Mehr als 10 Jahre Rails-Erfahrung. Inhouse-Schulung möglich (Deutsch und Englisch).
 ---
 <div class="container">
   <div class="row">
