--- a/jekyll/trainings/index.html
+++ b/jekyll/trainings/index.html
@@ -11,8 +11,16 @@ description: >
 
   <div class="row">
     <div class="column">
-      <p>Ich biete Schulungen zu den Theman Ruby on Rails, Phoenix Framework und WebPerformance an. Zusätzlich biete ich auf Anfrage auch Schulungen zu Ruby und Elixir.</p>
-      <p>Wenn Sie in der nachfolgenden Tabelle keine passende Schulung finden, dann schreiben Sie mir bitte eine E-Mail an <a href="mailto:{{ site.email }}">{{ site.email }}</a> oder rufen Sie mich an (Tel: <a href="tel:{{ site.phone_number_i18n }}">{{ site.phone_number }}</a>). Ich berate Sie gerne und erstelle Ihnen dann ein Angebot für eine auf Sie zugeschnittene Schulung.</p>
+      <p>Ich biete Schulungen zu den folgenden Themen an:</p>
+      <ul>
+        <li>Ruby on Rails (<a href="/trainings/rails.html">Inhalt der Rails-Schulung</a>)</li>
+        <li>Phoenix Framework (<a href="/trainings/phoenix.html">Inhalt der Phoenix-Schulung</a>)</li>
+        <li>WebPerformance (<a href="/trainings/webperformance.html">Inhalt der WebPerformance-Schulung</a>)</li>
+        <li>Jekyll</li>
+        <li>Ruby</li>
+        <li>Elixir</li>
+      </ul>
+      <p>Wenn Sie auf dieser Webseite keine für Sie passende Schulung finden, dann schreiben Sie mir bitte eine E-Mail an <a href="mailto:{{ site.email }}">{{ site.email }}</a> oder rufen Sie mich an (Tel: <a href="tel:{{ site.phone_number_i18n }}">{{ site.phone_number }}</a>). Ich berate Sie gerne und erstelle Ihnen dann ein Angebot für eine auf Sie zugeschnittene Schulung.</p>
     </div>
   </div>
 </div>
