--- a/jekyll/webperformance/index.html
+++ b/jekyll/webperformance/index.html
@@ -12,9 +12,9 @@ description: >
   <div class="row">
     <div class="column">
       <figure>
-      <a href="http://www.heise.de/ix/inhalt/2015/8/102/">
-        <img class=scaled src="{% base64 assets/ix-webperformance-artikel.gif %}" alt="iX WebPerformance Artikel Ausgabe 8/2015" /></a>
-        <figcaption><a href="http://www.heise.de/ix/inhalt/2015/8/102/">Mein iX WebPerformance-Artikel Ausgabe 8/2015</a></figcaption>
+        <a href="http://www.heise.de/ix/inhalt/2015/8/102/">
+          <img class=scaled src="{% base64 assets/ix-webperformance-artikel.gif %}" alt="iX WebPerformance Artikel Ausgabe 8/2015" /></a>
+          <figcaption>Mein <a href="http://www.heise.de/ix/inhalt/2015/8/102/">iX WebPerformance-Artikel Ausgabe 8/2015</a></figcaption>
       </figure>
       <p>
         Eine Sekunde schnellere Ladezeit resultiert im Durchschnitt in einer 5 Prozent besseren Conversion Rate. Ich helfe Ihnen eine neue schnelle Webseite zu realisieren oder Ihre existierene Webseite und -applikation zu optimieren.
