--- a/jekyll/trainings/rails.html
+++ b/jekyll/trainings/rails.html
@@ -134,7 +134,7 @@ description: >
     <div class="column">
       <h2>Was muss mitgebracht werden?</h2>
       <p>
-        Jeder Teilnehmer muss einen Laptop mit einem installierten Ruby 2.4 und Rails 5.1 mitbringen. Gerne helfen wir im Vorfeld der Schulung per E-Mail oder Telefon-Support bei der Installation.
+        Jeder Teilnehmer muss einen Laptop mit einem installierten Ruby 2.4 und Rails 5.1 mitbringen. Gerne helfe ich Ihnen im Vorfeld der Schulung per E-Mail oder Telefon-Support bei der Installation.
       </p>
       <h2>Buchung</h2>
       <p>
