--- a/jekyll/trainings/webperformance.html
+++ b/jekyll/trainings/webperformance.html
@@ -78,7 +78,7 @@ description: >
     <div class="column">
       <h2>Was muss mitgebracht werden?</h2>
       <p>
-        Jeder Teilnehmer muss einen Laptop mit einem installierten aktuellen <a href="https://www.google.de/chrome/browser/desktop/index.html">Chrome Browser</a> mitbringen.
+        Jeder Teilnehmer muss einen Laptop mit einem installierten aktuellen <a href="https://www.google.de/chrome/browser/desktop/index.html">Chrome Browser</a> und funktionierendem WLAN mitbringen.
       </p>
       <h2>Buchung</h2>
       <p>
