--- a/jekyll/webperformance/index.html
+++ b/jekyll/webperformance/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: WebPerformance - Consulting und Schulungen
+title: WebPerformance Consulting
 description: >
   Ich optimiere mit Ihnen die Ladezeiten Ihrer Webseiten. Full-Stack. 1 Sekunde schnellere Ladezeit = 5% bessere Conversion Rate. Bonus: Besseres Google Ranking.
 ---
@@ -17,7 +17,7 @@ description: >
           <figcaption>Mein <a href="http://www.heise.de/ix/inhalt/2015/8/102/">iX WebPerformance-Artikel Ausgabe 8/2015</a></figcaption>
       </figure>
       <p>
-        Eine Sekunde schnellere Ladezeit resultiert im Durchschnitt in einer 5 Prozent besseren Conversion Rate. Ich helfe Ihnen eine neue schnelle Webseite zu realisieren oder Ihre existierene Webseite und -applikation zu optimieren.
+        Eine Sekunde schnellere Ladezeit resultiert im Durchschnitt in einer 5 Prozent besseren Conversion Rate. Ich helfe Ihnen eine neue schnelle Webseite zu realisieren oder Ihre existierene Webseite und -applikation zu optimieren. Zusätzlich zum Consulting biete ich eine <a href="/trainings/webperformance.html">WebPerformance-Schulung</a> an.
       </p>
       <p>
         WebPerformance Optimierung ist ein Full-Stack Projekt: Optimierung auf der CSS-, HTML- und JavaScript Ebene sind dabei nur der Anfang. Weiter geht es mit WebServer, DB-Server, Betriebssystem und Netzwerk. Manchmal können Kleinigkeiten - wie ein aktueller Kernel - große Einsparungen bringen und manchmal bedarf es großer Veränderungen in der Architektur.
