--- a/jekyll/trainings/webperformance.html
+++ b/jekyll/trainings/webperformance.html
@@ -2,7 +2,7 @@
 layout: default
 title: WebPerformance Schulung mit Stefan Wintermeyer
 description: >
-  1-Tages Anfängerkurs vom Bestseller-Autor Stefan Wintermeyer. Full-Stack. Anhand von Beispielen lernen wir die Möglichenkeiten und Grenzen.
+  1-Tages Anfängerkurs vom Bestseller-Autor Stefan Wintermeyer. Full-Stack. Anhand von Beispielen die Möglichkeiten und Grenzen der Optimierung kennen lernen.
 ---
 <div class="container">
   <div class="row">
