Adds training dates.

--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -30,8 +30,9 @@ sw_avatar: true
       </figure>
       <p>Seit mehr als 10 Jahren arbeite ich mit Ruby on Rails. <a href="http://amzn.to/2uFtEOh">Mein erstes deutsche Ruby on Rails Buch</a> erschien zur Rails Version 3.2 (5-Sterne-Bewertung bei Amazon). Mein neustes englisches Rails-Buch beschäftigt sich mit der aktuellen Version 5.1.</p>
       <p>Rails ist mein Butter und Brot Geschäft. Es ist weiterhin das populärste Framework, um Webapplikationen zu erstellen.</p>
-      <p><a href="/rails/">Mehr Informationen zu Rails Consulting und Schulung.</a></p>
-      {% include talks-mini-table.html tag='Rails' %}
+      <p><a href="/rails/">Mehr Informationen zu Rails Consulting.</a></p>
+      <h3>Schulungstermine</h3>
+      {% include trainings-mini-table.html tag='Rails' %}
     </div>
     <div class="column">
       <h3>Phoenix Framework</h3>
@@ -42,8 +43,9 @@ sw_avatar: true
       </figure>
       <p>Seit gut zwei Jahren beschäftige ich mich mit dem Phoenix Framework und der funktionalen Programmiersprache Elixir als schnelle Alternative zu Ruby on Rails. Das Open-Source Social-Network <a href="https://www.vutuv.de">vutuv</a> wurde von mir als Phoenix-Projekt gegründet.</p>
       <p>Phoenix ist ideal für alle Projekte, die maximale Performance benötigen.</p>
-      <p><a href="/phoenix/">Mehr Informationen zu Phoenix Consulting und Schulung.</a></p>
-      {% include talks-mini-table.html tag='Phoenix' %}
+      <p><a href="/phoenix/">Mehr Informationen zu Phoenix Consulting.</a></p>
+      <h3>Schulungstermine</h3>
+      {% include trainings-mini-table.html tag='Phoenix' %}
     </div>
   </div>
 
