--- a/jekyll/trainings/index.html
+++ b/jekyll/trainings/index.html
@@ -21,6 +21,8 @@ description: >
         <li>Elixir</li>
       </ul>
       <p>Wenn Sie auf dieser Webseite keine für Sie passende Schulung finden, dann schreiben Sie mir bitte eine E-Mail an <a href="mailto:{{ site.email }}">{{ site.email }}</a> oder rufen Sie mich an (Tel: <a href="tel:{{ site.phone_number_i18n }}">{{ site.phone_number }}</a>). Ich berate Sie gerne und erstelle Ihnen dann ein Angebot für eine auf Sie zugeschnittene Schulung.</p>
+
+      {% include trainings-full-table.html %}
     </div>
   </div>
 </div>
