--- a/jekyll/trainings/rails.html
+++ b/jekyll/trainings/rails.html
@@ -18,8 +18,9 @@ description: >
       </figure>
       <p>Ruby on Rails ist das populärste Framework um moderne Webapplikationen zu erstellen. Ruby on Rails Entwickler sind gesucht. Ich beschäftige mich mit Rails seit über 10 Jahren und habe mehrere <a href="http://www.ruby-auf-schienen.de">Bücher</a> und Artikel zu Rails geschrieben. Das Ziel meiner Rails-Schulung ist ein schneller Einstieg. Auch wenn Sie vorher noch nie mit Ruby gearbeitet haben, sind Sie am Ende des Kurses in der Lage einfache Web-Applationen zu erstellen.</p>
       <p>
-      Haben Sie eine Frage zur Schulung? Dann schreiben Sie mir bitte eine E-Mail an <a href="mailto:{{ site.email }}">{{ site.email }}</a> oder rufen Sie mich an (Tel. <a href="tel:{{ site.phone_number_i18n }}">{{ site.phone_number }}</a>).</p>
-      <p>In meiner 2-tägigen Schulung behandele ich mit Ihnen die folgende Themen:</p>
+      Haben Sie eine Frage zu Inhalten oder benötigen Sie kurzfristig eine 1:1 Schulung? Dann schreiben Sie mir bitte eine E-Mail an <a href="mailto:{{ site.email }}">{{ site.email }}</a> oder rufen Sie mich an (Tel. <a href="tel:{{ site.phone_number_i18n }}">{{ site.phone_number }}</a>).</p>
+      <h2>Schulungsinhalte</h2>
+      <p>Nachfolgend finde Sie eine Liste der Themen, die wir in der Rails-Schulung besprechen. Je nach Gruppe, Interesse und Vorwissen gehe ich auf einzelne Themen intensiver ein oder überspringe sie.</p>
     </div>
   </div>
 
@@ -132,6 +133,8 @@ description: >
 
   <div class="row">
     <div class="column">
+      {% include trainings-full-table.html tag='Rails' %}
+
       <h2>Was muss mitgebracht werden?</h2>
       <p>
         Jeder Teilnehmer muss einen Laptop mit einem installierten Ruby 2.4 und Rails 5.1 mitbringen. Gerne helfe ich Ihnen im Vorfeld der Schulung per E-Mail oder Telefon-Support bei der Installation.
