--- a/jekyll/webperformance/index.html
+++ b/jekyll/webperformance/index.html
@@ -38,10 +38,7 @@ description: >
       <p>Ich unterstützte Sie bei der analyse Ihrer bestehenden Webseite und WebApplikation. On-site, Remote und bei Feuerwehreinsätzen auch 24 x 7. </p>
       {% include consulting-preise.html %}
 
-      <h3>Schulungen</h3>
-      <p>Ich biete auf Anfrage eine eintägigen WebPerformance-Schulung an. Wir starten in der Schulung morgens mit einem normalen Rails-Webshop und optimieren diesen im Laufe des Tages.</p>
-      <h3>1:1 Schulungen</h3>
-      <p>Wenn Sie kurzfristig eine Schulung benötigen, dann können Sie auch eine 1:1 Schulung buchen.</p>
+      {% include trainings-full-table.html tag='WebPerf' %}
     </div>
   </div>
 
