--- a/jekyll/trainings/phoenix.html
+++ b/jekyll/trainings/phoenix.html
@@ -2,7 +2,7 @@
 layout: default
 title: Phoenix Framework 1.3 Schulung mit Stefan Wintermeyer
 description: >
-  Anfängerkurs vom Bestseller-Autor Stefan Wintermeyer. Wir fangen mit Elixir-Grundlagen an und am Ende erstellen wir unsere eigenen Web-Applikationen.
+  Anfängerkurs vom Bestseller-Autor Stefan Wintermeyer. Die Schulung fängt mit Elixir-Grundlagen an und endet mit selbstgeschriebenen Web-Applikationen.
 ---
 <div class="container">
   <div class="row">
@@ -40,6 +40,8 @@ description: >
       <p>
         Jeder Teilnehmer muss einen Laptop mit einem installierten Phoenix 1.3 mitbringen. Gerne helfe ich Ihnen im Vorfeld der Schulung per E-Mail oder Telefon-Support bei der Installation.
       </p>
+      {% include trainings-full-table.html tag='Phoenix' %}
+
       <h2>Buchung</h2>
       <p>
         Die Schulung kann formlos per E-Mail an <a href="mailto:{{ site.email }}">{{ site.email }}</a> gebucht werden. Bitte geben Sie die Namen und E-Mail Adresse aller zu buchenden Teilnehmer und die gewünschte Rechnungsaddrese an. Ich bestätige Ihnen dann innerhalb von 48 Stunden Ihre Buchung.
