--- a/jekyll/trainings/webperformance.html
+++ b/jekyll/trainings/webperformance.html
@@ -80,6 +80,8 @@ description: >
       <p>
         Jeder Teilnehmer muss einen Laptop mit einem installierten aktuellen <a href="https://www.google.de/chrome/browser/desktop/index.html">Chrome Browser</a> und funktionierendem WLAN mitbringen.
       </p>
+      {% include trainings-full-table.html tag='WebPerf' %}
+
       <h2>Buchung</h2>
       <p>
         Die Schulung kann formlos per E-Mail an <a href="mailto:{{ site.email }}">{{ site.email }}</a> gebucht werden. Bitte geben Sie die Namen und E-Mail Adresse aller zu buchenden Teilnehmer und die gewünschte Rechnungsaddrese an. Ich bestätige Ihnen dann innerhalb von 48 Stunden Ihre Buchung.
