Adds schema markup.

--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -80,3 +80,18 @@ sw_avatar: true
     </div>
   </div>
 </div>
+
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Corporation",
+  "name": "Wintermeyer Consulting",
+  "url": "https://www.wintermeyer-consulting.de",
+  "logo": "",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+49-261-9886803",
+    "contactType": "sales"
+  }
+}
+</script>
