Adds Phoenix Book

--- a/jekyll/phoenix/index.html
+++ b/jekyll/phoenix/index.html
@@ -47,8 +47,12 @@ description: >
       <p>Je nach Gruppe, Interesse und Vorwissen gehe ich auf einzelne Themen intensiver ein oder überspringe sie. So kann man z.B. in einer 2-tägigen Schulung nicht Test-Driven-Development komplett durcharbeiten.</p>
       <p>Gerne helfe ich Ihnen auch mit customized Schulungen um Ihr bestehendes Team auf neue Aufgaben vorzubereiten.</p>
       <h3>Termine</h3>
-      {% include trainings-mini-table.html tag='Phoenix' %}
-      <p>Wenn Sie kurzfristig eine Schulung benötigen, dann können Sie auch eine 1:1 Schulung buchen.</p>
+      <p>
+        Seit dem Ausbruch der Corona-Epidemie biete ich nur noch Remote- und teilweise
+        Vor-Ort-Schulungen an.
+        Haben Sie einen Wunschtermin? Schreiben Sie mit bitte eine E-Mail an <a
+          href="mailto:sw@wintermeyer-consulting.de">sw@winermeyer-consulting.de</a>
+      </p>
     </div>
   </div>
 
