--- a/jekyll/rails/index.html
+++ b/jekyll/rails/index.html
@@ -42,11 +42,14 @@ description: >
       </figure>
       <p>Mein erstes deutsche <a href="http://amzn.to/2vtbdAB">Ruby on Rails 3.2 Buch</a> (5 Sterne Bewertung bei Amazon) ist bis heute das best verkaufte deutsche Ruby on Rails Buch. Mein neustes englisches Rails Buch beschäftigt sich mit der aktuellen Version 5.1.</p>
       <p>Das aktuelle <a href="http://amzn.to/2uZVFDC">Learn Rails 5.1 Buch</a> ist die Grundlage für meine Anfänger-Schulungen. Dieses 2-Tages-Training beschäftigt sich u.a. mit folgenden Themen: Ruby Grundlagen, Erste Schritte mit Rails (ein Hello World), Active Record, Scaffolding und RESTful Architektur, Routing, Bundler und Gems, Forms, Cookies und Sessions, Test Driven Development (TDD), Active Job, Action Mailer, I18n Sprachanpassungen, Asset Pipeline, Caching, Action Cable, Secrets. <a href="/trainings/rails.html">Eine komplette Liste der Schulungsinhalte finden Sie auf der Rails-Schulungs-Seite.</a></p>
-      {% include trainings-mini-table.html tag='Rails' %}
 
-      <p>Gerne helfe ich Ihnen auch mit customized Schulungen um Ihr bestehendes Team auf neue Aufgaben vorzubereiten.</p>
-      <h3>1:1 Schulungen</h3>
-      <p>Wenn Sie kurzfristig eine Schulung benötigen, dann können Sie auch eine 1:1 Schulung buchen.</p>
+      <h3>Termine</h3>
+      <p>
+        Seit dem Ausbruch der Corona-Epidemie biete ich nur noch Remote- und teilweise
+        Vor-Ort-Schulungen an.
+        Haben Sie einen Wunschtermin? Schreiben Sie mit bitte eine E-Mail an <a
+          href="mailto:sw@wintermeyer-consulting.de">sw@winermeyer-consulting.de</a>
+      </p>
     </div>
   </div>
 
