--- a/jekyll/webperformance/index.html
+++ b/jekyll/webperformance/index.html
@@ -44,7 +44,13 @@ description: >
       <p>Ich unterstützte Sie bei der analyse Ihrer bestehenden Webseite und WebApplikation. On-site, Remote und bei Feuerwehreinsätzen auch 24 x 7. </p>
       {% include consulting-preise.html %}
 
-      {% include trainings-full-table.html tag='WebPerf' %}
+      <h3>Schulungstermine</h3>
+      <p>
+        Seit dem Ausbruch der Corona-Epidemie biete ich nur noch Remote- und teilweise
+        Vor-Ort-Schulungen an.
+        Haben Sie einen Wunschtermin? Schreiben Sie mit bitte eine E-Mail an <a
+          href="mailto:sw@wintermeyer-consulting.de">sw@winermeyer-consulting.de</a>
+      </p>
     </div>
   </div>
 
