Update Phoenix 1.5 book.

--- a/jekyll/books/index.html
+++ b/jekyll/books/index.html
@@ -1,24 +1,9 @@
----
-layout: default
-title: Bücher
-description: >
-  Bücher von Stefan Wintermeyer.
----
-<div class="container">
-  <div class="row">
-    <div class="column"><h1>Bücher</h1></div>
-  </div>
-
-  <div class="row">
-    <div class="column">
-      <p>
-        Über die Jahre sind ein paar technische Bücher zusammengekommen. Die alten 
-        Bücher finden Sie auf meiner <a href="https://www.amazon.de/Stefan-Wintermeyer/e/B0045AF1AU">Amazon Autorenseite</a>.
-        Und hier ein Link zu einem Buch, das ich gerade schreibe:
-      </p>
-      <ul>
-        <li><a href="/books/phoenix/1.5/">Phoenix Beginner's Guide</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<link rel="canonical" href="https://www.wintermeyer-consulting.de/books/phoenix/1.5/phoenix/1.5/index.html">
+<script>location="phoenix/1.5/index.html"</script>
+<meta http-equiv="refresh" content="0; url=phoenix/1.5/index.html">
+<meta name="robots" content="noindex">
+<title>Redirect Notice</title>
+<h1>Redirect Notice</h1>
+<p>The page you requested has been relocated to <a href="phoenix/1.5/index.html">https://www.wintermeyer-consulting.de/books/phoenix/1.5/phoenix/1.5/index.html</a>.</p>
